tests/reference/asr_preprocess-cpp_err5-38d12de.stderr
C preprocessor error: Unknown token '@'
 --> tests/errors/cpp_err5.f90:1:5
  |
1 | program cpp_err5
  |     ^ 
